--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.56.1",
+    "react-select": "^5.7.4",
+    "sass": "^1.63.6",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
