--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-app",
   "version": "0.1.0",
+  "homepage": "https://Antoine-manu.github.io/Home2Air-WebAPP",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -14,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "gh-pages": "^6.0.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -30,6 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
